syntax = "proto3";
package auth_service;
option go_package = "superserver/domain/auth_service";

import "public/common.proto";

message UserRoleRef {
    int32 id = 1;
    int32 user_id = 2;
    int32 role_id = 3;
    
    int64 delete_time = 1001;
    int64 create_time = 1002;
    int64 update_time = 1003;
    int32 creator = 1004;
    int32 updater = 1005;
}

message UserRoleRefFilter {
    repeated int32 ids = 1;
    repeated int32 user_ids = 2;
    repeated int32 role_ids = 3;

    public.BetweenInt64 delete_time_range = 101;
    public.BetweenInt64 create_time_range = 102;
    public.BetweenInt64 update_time_range = 103;
    repeated int32 creators = 104;
    repeated int32 updaters = 105;
}


message ListUserRoleRefParams {
    public.Header header = 1;
    public.Pager pager = 2;
    repeated public.Sort sorts = 3;
    UserRoleRefFilter filter = 4;
}

message ListUserRoleRefReply {
    public.ReplyHeader header = 1;
    public.Pager pager = 2;
    repeated UserRoleRef data = 3;
}

message OperateUserRoleRefParams {
    public.Header header = 1;
    public.Operation operate = 2;
    UserRoleRef data = 3;
}

message OperateUserRoleRefReply {
    public.ReplyHeader header = 1;
    UserRoleRef data = 2;
}

message BatchOperateUserRoleRefParams {
    public.Header header = 1;
    public.Operation operate = 2;
    repeated UserRoleRef data = 3;
}

message BatchOperateUserRoleRefReply {
    public.ReplyHeader header = 1;
}
